--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td>  <img src="E:\Web Dev\HTML-Personal Site\Images\Tasnim Picture (Original).png" alt="Tasnim Hayat Chowdhury">
+      <td>  <img src="Images\Tasnim Picture (Original).png" alt="Tasnim Hayat Chowdhury">
 </td>
       <td>  <h1>Tasnim Hayat Chowdhury</h1>
         <p>
